--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                spacer
 version:             0.1.0.0
-github:              "githubuser/spacer"
+github:              "bfbonatto/spacer"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2021 Author name here"
+author:              "Bruno Bonatto"
+maintainer:          "bfbonatto@gmail.com"
+copyright:           "2021 Bruno Bonatto"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/spacer#readme>
+description:         Please see the README on GitHub at <https://github.com/bfbonatto/spacer#readme>
 
 dependencies:
 - base >= 4.7 && < 5
